--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: #ffffff;
+}
+
+.amarelo{
+    background-color: rgb(173, 173, 173);
+}
+
+#titulo{
+    background-color:rgb(158, 158, 158);
+    height: 35px;;
+    
+}
+
+#titulo1{
+    margin: 5px;
 }
