--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
 body{
     background-color: #ffffff;
+    margin: 0;
+    padding: 0;
 }
 
-.amarelo{
-    background-color: rgb(173, 173, 173);
+#amarelo{
+    background-color: #ffee00;
+    padding: 10px;
 }
 
 #titulo{
     background-color:rgb(158, 158, 158);
-    height: 35px;;
+    height: 50px;;
+    
     
 }
 
 #titulo1{
-    margin: 5px;
+    margin: 15px;
+    font-size: 15px;
+    
 }
